--- a/css/styles.css
+++ b/css/styles.css
@@ -219,11 +219,8 @@ address {
   width: 1440px;
   text-align: center;
 
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url("/images/hero-bg.jpg");
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url("../images/hero-bg.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
@@ -316,8 +313,8 @@ address {
   background-color: var(--white);
   flex-basis: calc(100% / 4 - 24px);
 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
 
   margin-left: 24px;
@@ -331,24 +328,17 @@ address {
 .card-list-soc {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 16px;
-  margin-left: -16px;
 }
 
 .card-link-soc {
   width: 40px;
   height: 40px;
-  justify-content: center;
-  align-items: center;
-  background: var(--slate);
+  background: var(--iris);
   border-radius: 50%;
-  margin-left: 16px;
-  padding: 8px;
-}
 
-.card-link-soc:hover,
-.card-link-soc:focus {
-  background: var(--green);
+  padding: 12px;
 }
 
 .card-list-soc-item {
@@ -356,8 +346,8 @@ address {
 }
 
 .card-list-icon {
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
 }
 
 /* ++++ Studio Section 4 ++++ */
@@ -376,17 +366,16 @@ address {
 
 .customers-item {
   flex-basis: calc(100% / 6 - 24px);
-
   margin-left: 24px;
-
-  outline: 1px solid var(--light-slate);
-  border-radius: 4px;
 }
 
 .customers-svg {
   width: 168px;
   height: 88px;
   padding: 16px 32px;
+
+  border: 1px solid var(--light-slate);
+  border-radius: 4px;
 }
 
 /* ++++ Portfolio Section ++++ */
@@ -457,12 +446,8 @@ address {
 }
 
 .portfolio-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-item:hover .portfolio-item-thumb {
-  background-image: linear-gradient(var(--iris), var(--iris));
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /* ++++ Footer ++++ */
@@ -512,8 +497,6 @@ address {
 .footer-link {
   width: 40px;
   height: 40px;
-  justify-content: center;
-  align-items: center;
   background: var(--slate);
   border-radius: 50%;
   margin-left: 16px;
